--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ path = "examples/debug_connection.rs"
 anyhow = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
 clap = { version = "4.5", features = ["derive", "color", "suggestions"] }
+fastrand = "2.3.0"
 futures-util = "0.3"
 metrics = "0.24"
 metrics-exporter-prometheus = "0.17"
@@ -31,6 +32,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "2.0"
 tokio = { version = "1.0", features = ["full"] }
+tokio-test = "0.4"
 tokio-tungstenite = { version = "0.27", features = ["rustls-tls-webpki-roots"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
