--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rs-hyperliquid"
 version = "0.1.0"
-authors = ["ℭ𝔦𝔭𝔥𝔢𝔯 <https://github.com/cipher-rc5>"]
+authors = ["cipher <https://github.com/cipher-rc5>"]
 categories = ["command-line-utilities", "api-bindings", "asynchronous"]
 edition = "2024"
 exclude = ["examples/debug_connection"]
@@ -10,6 +10,7 @@ keywords = ["hyperliquid", "websocket", "trading", "cryptocurrency", "real-time"
 license = "MIT"
 readme = "readme.md"
 repository = "https://github.com/cipher-rc5/rs-hyperliquid"
+rust-version = "1.91"
 description = "High-performance WebSocket client for Hyperliquid trading data with real-time market data streaming"
 
 [[bin]]
@@ -21,29 +22,35 @@ name = "debug_connection"
 path = "examples/debug_connection.rs"
 
 [dependencies]
+# error handling
 anyhow = "1.0.101"
+thiserror = "2.0"
+
+# serialization and message types
 chrono = { version = "0.4.43", features = ["serde"] }
-clap = { version = "4.5.58", features = ["derive", "color", "suggestions"] }
-fastrand = "2.3.0"
-fastwebsockets = { version = "0.10.0", features = ["upgrade"] }
-futures-util = "0.3"
-metrics = "0.24"
-metrics-exporter-prometheus = "0.18.1"
-rustls = { version = "0.23", features = ["ring"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-thiserror = "2.0"
+
+# cli and runtime
+clap = { version = "4.5.58", features = ["derive", "color", "suggestions"] }
 tokio = { version = "1.0", features = ["full"] }
+
+# networking and transport
+fastrand = "2.3.0"
+fastwebsockets = { version = "0.10.0", features = ["upgrade"] }
+rustls = { version = "0.23", features = ["ring"] }
 tokio-rustls = { version = "0.26", features = ["ring"] }
-tokio-test = "0.4"
+
+# observability
+metrics = "0.24"
+metrics-exporter-prometheus = "0.18.1"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
+
+# utility crates
 url = "2.5"
 uuid = { version = "1.18", features = ["v4"] }
 webpki-roots = "1.0.6"
-
-[dev-dependencies]
-tokio-test = "0.4"
 
 [profile.release]
 opt-level = 3
